--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -407,3 +407,8 @@ form {
 		margin-left: 75%;
 	}
 }
+@media screen and (min-width:550px) and (max-width: 799px) {
+	.testimonials {
+		height: 2500px;
+	}
+}
